--- a/src/index.template.ejs
+++ b/src/index.template.ejs
@@ -1,1 +1,11 @@
-<html>  <head>      <meta charset="utf-8">      <title>Test EJS</title>  </head>  <body>        </body></html>
+<html>
+<head>
+  <base href="/">
+  <title>Test Angular-Webpack-ES6</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+  <app-root>Loading...</app-root>
+</body>
+</html>
